Modify home pages for reviews

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <nav class="bottom-nav flex flex-center in-nav">
             
             <div class="logo">
-                <h1><a href="/index.html">Dev Dome</a></h1>
+                <h2><a href="https://armynerh.github.io/html-capstone-project">Dev Dome</a></h2>
                </div>
 
            <ul class="ul-nav flex" >
-            <li class="items"><a href="/about.html">About</a></li>
+            <li class="items"><a href="https://armynerh.github.io/html-capstone-project/about">About</a></li>
             <li class="items">Program</li>
             <li class="items">Join</li>
             <li class="items">Sponsor</li>
@@ -51,10 +51,10 @@
                     <li class="toggle-icon">
                         <i><i class="fa-solid fa-xmark"></i></i>
                     <li class="nav-item">
-                        <a href="/index.html" class="nav-box">Home</a>
+                        <a href="/https://armynerh.github.io/html-capstone-project" class="nav-box">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/about.html" class="nav-box">About</a>
+                        <a href="https://armynerh.github.io/html-capstone-project/about" class="nav-box">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#form-div1" class="nav-box">Program</a>
@@ -80,7 +80,7 @@
                 <p>A joyful celebration believing in the value</p>
                 <p>A joyful celebration believing in the value</p>
             </div>
-            <div class="tf-color margin-item">
+            <div class="tf-color margin-item last-p">
                 <h3>2015.10.15(THU) ~ 16(FRI)</h3>
                 <p>National Museum of Korea Art center Nabi and more</p>
             </div>
@@ -90,6 +90,7 @@
             <div class="programme-container text-center bg-first">
             <div class="sf-color programme-head font2">
                 <h5>Our Programme</h5>
+                <img src="images/substract.png" class="img3">
             </div>
             <div class="programme-cards flex center-self text-center">
                 <div class="min-cards center-self grid bg-second text-center">
@@ -137,7 +138,10 @@
         </section>
         <section>
             <div class="features text-center">
-            <div class="our-team flex center-self"><p>Our Team</p></div>
+                <div class="tf-color programme-head font2 our-team">
+                    <h5>Team Members</h5>
+                    <img src="images/substract.png" class="img3">
+                </div>
             <div class="grid two-column one-column team" >
       
             </div>
@@ -157,7 +161,7 @@
     <footer>
         <div class="footer-container flex center-self">
             <div class="logo">
-                <h1><a href="/index.html">Dev Dome</a></h1>
+                <h2><a href="/https://armynerh.github.io/html-capstone-project">Dev Dome</a></h2>
                </div>
         <div class="copyright center-self"><p>&copy; creative commons ltd
         </p></div>
