Modify files to implement review changes

--- a/index.html
+++ b/index.html
@@ -98,35 +98,35 @@
                     <div class="ff-color first-font">
                         <h3>Creative Thinking</h3>
                     </div>
-                    <div class="sf-color"><p>Lorem Ipsum sit dolo met blah blah blah blah blah</p></div>
+                    <div class="sf-color min-txt"><p>Styling can be done using properties like background-color, color, text-decoration, etc</p></div>
                 </div>
                 <div class="min-cards center-self grid bg-second text-center">
                     <div><img src="images/career-path.png" class="img2"></div>
                     <div class="ff-color first-font">
                         <h3>Career Planning</h3>
                     </div>
-                    <div class="sf-color"><p>Lorem Ipsum sit dolo met blah blah blah blah blah</p></div>
+                    <div class="sf-color min-txt"><p>Styling can be done using properties like background-color, color, text-decoration, etc</p></div>
                 </div>
                 <div class="min-cards center-self grid bg-second text-center">
                     <div><img src="images/writing.png" class="img2"></div>
                     <div class="ff-color first-font">
                         <h3>Technical Writing</h3>
                     </div>
-                    <div class="sf-color"><p>Lorem Ipsum sit dolo met blah blah blah blah blah</p></div>
+                    <div class="sf-color min-txt"><p>Styling can be done using properties like background-color, color, text-decoration, etc</p></div>
                 </div>
                 <div class="min-cards center-self grid bg-second text-center">
                     <div><img src="images/coding.png" class="img2"></div>
                     <div class="ff-color first-font">
                         <h3>Coding</h3>
                     </div>
-                    <div class="sf-color"><p>Lorem Ipsum sit dolo met blah blah blah blah blah</p></div>
+                    <div class="sf-color min-txt"><p>Styling can be done using properties like background-color, color, text-decoration, etc</p></div>
                 </div>
                 <div class="min-cards center-self grid bg-second text-center">
                     <div><img src="images/artificial-intelligence.png" class="img2"></div>
                     <div class="ff-color first-font">
                         <h3>Testing</h3>
                     </div>
-                    <div class="sf-color"><p>Lorem Ipsum sit dolo met blah blah blah blah blah</p></div>
+                    <div class="sf-color min-txt" ><p>Styling can be done using properties like background-color, color, text-decoration, etc</p></div>
                 </div>
             </div>
             <div class="sf-color">
